# Zenic-Agents

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README-1.md  README.md  REPARACION_PROGRESO.md  SECURITY_AUDIT.md  WORKLOG.md  diagnostico-fase1.md  plan-correcciones-fase2.md  requirements.txt  worklog.md
user/: .env.example  README-1.md  README.md  conftest.py  pyproject.toml  pyrightconfig.json  requirements.txt
user/.github/workflows/: weekly-health.yml
user/gateway/: errors.txt  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
user/gateway/eslint-rules/: api-auth-required.js
user/gateway/prisma/: schema.prisma
user/gateway/prisma/schema_parts/: _phase1_core.prisma  _phase5_hitl_memory.prisma
user/gateway/rust-engine/src/: features.rs
user/gateway/src/: middleware.ts
user/gateway/src/lib/: api-client.ts  cache.ts  db.ts  durable-write-log.ts  hitl.ts  redis-session-store.ts  test-utils.tsx
user/mobile/: capacitor.config.ts  package-lock.json  package.json
user/mobile/android/: .gitignore  gradle.properties
user/mobile/android/app/: build.gradle  capacitor.build.gradle  proguard-rules.pro
user/mobile/www/js/: api-bridge.js  auth.js  db.js
user/src/: __init__.py
user/src/config/: __init__.py
user/src/core/: __init__.py  _exports.py  _exports_part1.py  _exports_part2.py  _phase6_imports.py  _phaseAC_imports.py  _phaseDF_imports.py  action_executor.py  analysis_utils.py  auth_service.py  automation_engine.py  dna_loader.py  env_loader.py  ipc_auth.py  logic_builder.py  mini_ai_engine.py  orchestrator.py  orchestrator_base.py  phase6_init.py  semantic_engine.py  smart_memory.py  subtask_descriptor.py  thinking_engine.py  verdict_engine_module.py
user/src/core/agents/: __init__.py
user/src/core/approval/: __init__.py  evidence.py  workflows.py
user/src/core/automation_parts/: __init__.py  crud.py  engine.py  project_gen.py
user/src/core/autopilot/: __init__.py  engine.py
user/src/core/blueprints/: __init__.py  boot.py  certifier.py  composer.py  loader.py  onboarding.py  partner_registry.py  registry.py  sdk.py  types.py  validator.py
user/src/core/channel/: __init__.py  _proactive.py  a52_voice.py  a53_text.py  message_bridge.py
user/src/core/channels/: __init__.py  _log_provider.py  _protocol.py
user/src/core/chaos/: __init__.py  steady_state.py  types.py
user/src/core/conversational/: __init__.py  context_builder.py  conversation_engine.py  engine_knowledge.py  engine_phase2_handlers.py  personality_manager.py  pipeline_handlers.py  redis_session_store.py  session_manager.py  zenic_bridge.py
user/src/core/defense/: __init__.py  anti_tampering.py  binary_hardening.py  encryption.py  server_secrets.py
user/src/core/degraded_mode/: __init__.py  persistence.py  types.py
user/src/core/distributed/: __init__.py  leader_election.py
user/src/core/dna_loader_parts/: __init__.py  _domain_validation_mixin.py  _glossary_mixin.py  _loader.py  _logic_modules_mixin.py
user/src/core/events/: __init__.py  schema_registry.py
user/src/core/exceptions/: __init__.py
user/src/core/executors/: __init__.py  base.py  blueprint_schema.py  database_executor.py  schedule_executor.py  transform_executor.py
user/src/core/knowledge/: __init__.py  cross_agent.py  types.py
user/src/core/learning/: __init__.py  outcome_tracker.py
user/src/core/level2_macro_router/: router.py
user/src/core/level3_graph_ast/: engine.py
user/src/core/level4_apa_planner/: __init__.py  planner.py
user/src/core/level8_theorem_cache/: cache.py
user/src/core/license/: __init__.py  manager.py  signer.py  types.py
user/src/core/logic_blocks/: __init__.py  auth.py  builder.py  builder_registry.py  business_analytics.py  business_logic.py  chain.py  data.py  data_transform.py  flow.py  integration.py  validation.py
user/src/core/low_power_parts/: __init__.py  _imports.py  decision.py
user/src/core/memory_parts/: __init__.py  cache.py  database.py  episodes.py  longterm.py  pool.py  types.py
user/src/core/mini_ai_parts/: __init__.py  (+3 more)
user/src/data/: __init__.py  db_access.py  fs_scanner.py  local_scanner.py
user/src/entrypoints/: main.py  main_conversational.py  main_headless.py
user/src/onboarding/: __init__.py  app.py  prompts.py
user/tests/: test_a52_voice_channel.py  test_a53_text_channel.py  test_benchmarks.py  test_channel_system.py  test_determinism.py  test_ear_service.py  test_format_adapter.py  test_local_scanner.py  test_phase_fg.py  test_postgresql_e2e.py  test_redis_integration.py  test_redis_session_store.py  test_sna_monitors.py  test_transport_types.py  test_unified_circuit_breaker.py  test_vector_store.py  test_voice_pipeline.py  test_voice_pipeline_types.py
user/zenic-v2/zenic-flow/: Cargo.toml
user/zenic-v2/zenic-pybridge/: Cargo.toml
zenic-v2/: Cargo.toml
zenic-v2/zenic-bench/: Cargo.toml
zenic-v2/zenic-bench/benches/: hitl_lifecycle.rs  merkle_seal.rs  risk_calculation.rs  scalability_limits.rs  verdict_pipeline.rs  workflow_engine.rs
zenic-v2/zenic-memory/src/: hitl_bridge.rs  intent_routing.rs  lib.rs  policy_refinement.rs  schema_drift.rs
zenic-v2/zenic-policy/: Cargo.toml
zenic-v2/zenic-pybridge/src/: lib.rs
zenic-v2/zenic-safety/src/: lib.rs
zenic-v2/zenic-subscription/: Cargo.toml
zenic-v2/zenic-subscription/src/: feature_gates.rs
(+1864 files in other folders)
