[project]
name = "zenic-agents"
version = "3.0.0"
description = "Zenic-Agents - Agente Asistente Autónomo con Motor de IA Quirúrgico, SNA, Blueprints Certificados y Defensa en Profundidad"
requires-python = ">=3.10"
dependencies = [
    # Database
    "aiosqlite>=0.19.0",

    # AI/ML
    "numpy>=1.24.0",

    # Configuration
    "pyyaml>=6.0",

    # Scheduling
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
z3 = ["z3-solver>=4.12.0"]
tui = ["textual>=2.0.0"]
embeddings = ["fastembed>=0.2.0"]
llm = ["llama-cpp-python>=0.3.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0", "pytest-timeout>=2.1.0"]
all = [
    "z3-solver>=4.12.0",
    "fastembed>=0.2.0",
    "llama-cpp-python>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "asyncio: mark a test as an asyncio test",
    "integration: mark a test as an integration test",
    "e2e: mark a test as an end-to-end test",
    "slow: mark a test as slow running",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__",
    "pass",
]

[tool.maturin]
# Configuration for building the native Rust extension with maturin.
manifest-path = "zenic-v2/zenic-pybridge/Cargo.toml"
module-name = "_zenic_native"
python-source = "src"
strip = true

# ── Phase 6.2: Ruff Configuration ──────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (OK in tests)
    "S307",   # eval usage (justified in conversational tools)
    "B008",   # function call in default argument (common pattern)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Re-exports are intentional in __init__.py
"tests/**" = ["S101", "S105", "S106"]  # Assert and test fixtures OK in tests

[tool.ruff.lint.isort]
known-first-party = ["src", "zenic"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
