[workspace]
resolver = "2"
members = [
    "zenic-proto",
    "zenic-graph",
    "zenic-runtime",
    "zenic-flow",
    "zenic-policy",
    "zenic-safety",
    "zenic-core",
    # zenic-ffi removed from workspace — was an empty stub with 0 dependents.
    # Archived to zenic-v2/_archived/zenic-ffi/ for reference.
    # If C-FFI bindings are needed in the future, create a new crate
    # with a concrete plan and tracking issue.
    "zenic-pybridge",
    "zenic-bench",
    "zenic-tests",
    "zenic-subscription",
    "zenic-memory",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/yurislay9-ui/Zenic-Agents"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
zstd = "0.13"

# Error handling
thiserror = "2.0"

# IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Graph
petgraph = "0.7"
indexmap = "2.7"

# Observability
tracing = "0.1"

# Internal crates
zenic-proto = { path = "zenic-proto" }
zenic-graph = { path = "zenic-graph" }
zenic-memory = { path = "zenic-memory" }
