[package]
name = "zenic-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Benchmarks for Zenic-Agents"

[dependencies]
zenic-memory = { path = "../zenic-memory" }
zenic-safety = { path = "../zenic-safety" }
zenic-subscription = { path = "../zenic-subscription" }
zenic-proto = { path = "../zenic-proto" }
zenic-flow = { path = "../zenic-flow" }
zenic-graph = { path = "../zenic-graph" }
serde = { workspace = true }
serde_json = "1.0"
blake3 = "1.5"
bincode = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
rand = "0.8"

[[bench]]
name = "memory_cache"
harness = false

[[bench]]
name = "semantic_graph"
harness = false

[[bench]]
name = "ontology_base"
harness = false

[[bench]]
name = "safety_gate"
harness = false

[[bench]]
name = "merkle_seal"
harness = false

[[bench]]
name = "encrypted_db"
harness = false

[[bench]]
name = "subscription_saga"
harness = false

[[bench]]
name = "load_testing"
harness = false

[[bench]]
name = "verdict_pipeline"
harness = false

[[bench]]
name = "risk_calculation"
harness = false

[[bench]]
name = "workflow_engine"
harness = false

[[bench]]
name = "hitl_lifecycle"
harness = false

[[bench]]
name = "resource_limits"
harness = false

[[bench]]
name = "scalability_limits"
harness = false
